--- a/disconf-web/pom.xml
+++ b/disconf-web/pom.xml
@@ -271,7 +271,7 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
 
         <!-- log -->
